--- a/src/components/FormularioCadastro/estilo.css
+++ b/src/components/FormularioCadastro/estilo.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     padding: 12px 40px;
+    font-family: cursive;
     
   }
   .form-cadastro_input {
@@ -13,8 +14,9 @@
     padding: 4px;
     border: none;
     background-color: var(--fundo-detalhes);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: cursive;
     font-weight: 100;
+    border-radius: 6px;
   }
   
   .form-cadastro_submit {
@@ -27,4 +29,12 @@
   
   .form-cadastro_submit:active {
     background-color: var(--secundaria-ativa);
+  }
+
+  .lista_categoria-input{
+    background-color: aqua;
+    border: none;
+    border-radius: 5px;
+    margin: 4px;
+    padding: 4px;
   }
