--- a/src/components/ListaDeNotas/estilo.css
+++ b/src/components/ListaDeNotas/estilo.css
@@ -6,6 +6,7 @@
     list-style-type: none;
     padding-left: 24px;
     padding-top: 24px;
+    font-family: cursive;
   }
   .lista-notas_item {
     margin: 12px;
